[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/ui/MinigameBeginUI.gd" type="Script" id=1]
[ext_resource path="res://resources/sprites/ui/textboxgame.png" type="Texture" id=2]
[ext_resource path="res://resources/fonts/SHOWG.TTF" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 52
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=4]
resource_name = "shrink"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.25, 1.25 ), Vector2( 1e-05, 1e-05 ) ]
}

[node name="MinigameBeginUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 480, 270 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoPanel" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -158.5
margin_top = -109.0
margin_right = 158.5
margin_bottom = 109.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTipLabel" type="Label" parent="InfoPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.04
margin_top = -7.87003
margin_right = 94.9603
margin_bottom = 21.13
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.560784, 0, 0.239216, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 2
text = "Info"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CounterToStart" type="Label" parent="InfoPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.04
margin_top = 22.13
margin_right = 94.9603
margin_bottom = 51.13
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0.560784, 0, 0.239216, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 2
text = "3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoLabel" type="Label" parent="InfoPanel"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.0
margin_top = -5.5
margin_right = 47.0
margin_bottom = 47.5
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0.560784, 0, 0.239216, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 4
text = "Go!"
align = 1
valign = 1

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -30.0
margin_right = 100.0
margin_bottom = 30.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/shrink = SubResource( 4 )
